<resources>
    <string name="app_name">ViewModelEx</string>
    <!-- 애드몹 ID -->
    <string name="ad_unit_id_1">ca-app-pub-9532486238287041/8416465319</string>
    <!--    ca-app-pub-9532486238287041~5603551407-->

    <!-- 타이틀 -->
    <string name="workouts_title">운동시작</string>
    <string name="exercises_title">종목</string>
    <string name="logs_title">기록</string>
    <string name="explore_title">통계</string>
    <string name="settings_title">셋팅</string>

    <!-- workouts_string -->
    <string name="workout_start">빠른 시작</string>
    <string name="workout_btn1">프로그램 시작</string>
    <string name="workout_btn2">루틴 추가</string>
    <string name="workout_btn3">운동 종료</string>

    <!-- exercieses_string -->
    <string name="exer_search">검색</string>
    <string name="exer_addbtn">새 운동 추가</string>
    <string name="dialog_head">새 운동 생성</string>
    <string name="dialog_et1">이름 추가</string>
    <string name="dialog_sel1">신체 부위</string>
    <string name="dialog_sel2">카테고리</string>
    <string name="dialog_sel1op">없음</string>
    <string name="dialog_sel2op">없음</string>
    <string name="dialog_btn1">Save</string>
    <string name="log_item_header">수행한 세트</string>

    <!-- explore_string -->
    <string name="explo_week">최근 7일</string>
    <string name="explo_month">최근 30일</string>
    <string name="explo_all">전체기간</string>
    <string name="explo_text1">몸무게(kg)</string>
    <string name="explo_text2">골격근(kg)</string>
    <string name="explo_text3">체지방(kg)</string>
    <string name="explo_saveBtn">저장하기</string>
    <string name="explo_editHint">입력</string>

    <!-- workout_string -->
    <string name="work_done">완료</string>
    <string name="work_add_set">+ 세트 추가</string>
    <string name="work_add">워크아웃 추가</string>
    <string name="work_cancle">워크아웃 취소</string>
    <string name="work_rutin">루틴</string>
    <string name="work_rutin_btn">루틴 추가</string>
    <string name="work_row1">세트</string>
    <string name="work_row2">Kg</string>
    <string name="work_row3">Rep</string>
    <string name="dial_add_btn">추가</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
