<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/workouts"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:title="@string/workouts_title" />
    <item
        android:id="@+id/exercises"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/exercises_title" />
    <item
        android:id="@+id/logs"
        android:icon="@drawable/ic_cloud_queue_black_24dp"
        android:title="@string/logs_title" />
    <item
        android:id="@+id/explore"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/explore_title" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="@string/settings_title" />
</menu>