<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="230dp"
    android:layout_gravity="center"
    android:background="@color/fragmentBackGround"
    android:orientation="vertical"
    android:minWidth="360dp"
    android:minHeight="230dp">

    <TextView
        android:id="@+id/textView5"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:text="@string/dialog_head"
        app:layout_constraintEnd_toStartOf="@+id/exerSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exerSerach"
        style="@style/CustomEditText"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/search_bar"
        android:ems="10"
        android:hint="@string/dialog_et1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerSave" />

    <TextView
        android:id="@+id/textView6"
        style="@style/CustomTextView"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_sel2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/dialog_sel1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerSerach" />

    <Button
        android:id="@+id/exerSave"
        style="?borderlessButtonStyle"
        android:layout_width="81dp"
        android:layout_height="40dp"
        android:background="@color/fragmentBackGround"
        android:text="@string/dialog_btn1"
        android:textColor="@color/grayText"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/exerSerach"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/exerSerach"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/newExerCancelBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/search_bar"
        android:text="X"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/exerSerach" />

</androidx.constraintlayout.widget.ConstraintLayout>