<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".WorkoutsFragment" >

    <TextView
        style="@style/CustomTextView"
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="295dp"
        android:text="@string/workout_start"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/CustomTextView"
        android:layout_width="374dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:background="#4F63DD"
        android:text="@string/workout_btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="101dp"
        android:text="@string/workout_btn2"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workList" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/workout_btn3"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ListView
        android:id="@+id/workList"
        android:layout_width="409dp"
        android:layout_height="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="193dp" />

</androidx.constraintlayout.widget.ConstraintLayout>