<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackGround"
    tools:context=".WorkOut.WorkoutsFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/CustomTextView"
        android:layout_width="100dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="295dp"
        android:text="@string/workout_start"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/workOutStart"
        style="@style/CustomTextView"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="16dp"
        android:background="@color/workOutBtn"
        android:text="@string/workout_btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView10"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/work_rutin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workOutStart" />

    <Button
        android:id="@+id/workOutAddRutin"
        style="@style/CustomTextView"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@color/workOutBtn"
        android:text="@string/work_rutin_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <GridView
        android:id="@+id/rutinList"
        android:layout_width="408dp"
        android:layout_height="469dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workOutAddRutin" />

</androidx.constraintlayout.widget.ConstraintLayout>