<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginLeft="18dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="18dp"
    android:background="@color/fragmentBackGround"
    android:orientation="vertical">

    <EditText
        android:id="@+id/exerTitle"
        style="@style/CustomTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/blueText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        style="@style/WorkOutRowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/work_row1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerTitle" />

    <TextView
        android:id="@+id/textView12"
        style="@style/WorkOutRowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:text="@string/work_row3"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/exerTitle" />

    <TextView
        android:id="@+id/textView13"
        style="@style/WorkOutRowText"
        android:layout_width="18dp"
        android:layout_height="20dp"
        android:text="@string/work_row2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/exerTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="186dp" />

</androidx.constraintlayout.widget.ConstraintLayout>